1998-04-21 21:49  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* misc/sys/cdefs.h: New macro __REDIRECT to support changing the
	asm symbol name of functions.
	* include/features.h: Kill redundant test.

	* dirent/dirent.h: Use new macros to implement __USE_FILE_OFFSET64.
	* io/ftw.h: Likewise.
	* io/sys/stat.h: Likewise.
	* io/sys/statfs.h: Likewise.
	* io/sys/statvfs.h: Likewise.
	* libio/stdio.h: Likewise.
	* resource/sys/resource.h: Likewise.
	* rt/aio.h: Likewise.

	* posix/unistd.h: Use new macros for __USE_FILE_OFFSET64 and
	 __FAVOR_BSD.
	* signal/signal.h: Use new macros for BSD vs. SysV signal().

	* misc/Makefile: Drop bsd-compat.c.  Make libbsd-compat.a
	a dummy library.
	* misc/bsd-compat.c: Removed.

1998-04-21 20:32  Ulrich Drepper  <drepper@cygnus.com>

	* iconv/loop.c: Allow EXTRA_LOOP_DECLS be defined and use it in
	function declaration.
	* iconv/skeleton.c: Allow PREPARE_LOOP and EXTRA_LOOP_ARGS be defined
	and use them in conversion function.
	* iconvdata/Makefile (modules): Re-add ISO6446.
	* iconvdata/TEST: Add tests for ASCII variants.
	* iconvdata/iso646.c: Rewrite to use loop.c and skeleton.c.
	* iconvdata/testdata/ANSI_X3.4-1968: New file.
	* iconvdata/testdata/BS_4730: New file.
	* iconvdata/testdata/BS_4730..UTF8: New file.

1998-04-21 19:05  Ulrich Drepper  <drepper@cygnus.com>

	* iconv/gconv.h (struct gconv_step): Add element stateful.
	* iconv/gconv_builtin.c (__gconv_builtin_trans): Initialize stateful
	to zero for all internal conversions.
	* iconv/skeleton.c: Initialize stateful depending on whether or not
	RESET_STATE is defined to one or zero respectively.
	* stdlib/mblen.c: Use stateful element of currently selected
	converter for result if S is NULL.
	* stdlib/mbtowc.c: Likewise.
	* stdlib/wctomb.c: Likewise.

1998-04-21 18:00  Ulrich Drepper  <drepper@cygnus.com>

	* iconv/gconv.c (__gconv): Remove bogus input buffer size computation.

	* iconv/gconv_open.c (__gconv_open): Initialize outbufend element.
